--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="banner-container">
                 <h2 class="banner-title">All Thinks Are Possible If You believe</h2>
                 <p class="banner-description">There are many variations of passages of Lorem <br>Ipsum available, but
-                    the <br>majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    the majority have suffered  <br>alteration in some form, by injected humour</p>
                 <button class="btn-primary">Contact Us!</button>
             </div>
         </div>
@@ -30,10 +30,7 @@
                     <div>
                         <h3 class="failur-title">My failures of previous year</h3>
                         <p class="failur-description">Contrary to popular belief, Lorem Ipsum is not simply random text.
-                            It
-                            has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
-                            old.
-                            Richard McClintock.</p>
+                            It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old Richard McClintock.</p>
                         <ul>
                             <div class="li"><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit, amet consectetur
                                 adipisicing elit. Voluptatibus.</div>
